# pikuai-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  chat-and-gaurdrails-integration.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/core/: config.py  security.py
app/data/: store.py
app/db/: bootstrap.py  health.py  session.py
app/modules/admin/: router.py
app/modules/alerts/: router.py
app/modules/auth/: router.py
app/modules/billing/: router.py
app/modules/chat/: age_style_rules.py  child_response_service.py  message_classifier.py  prompt_builder.py  router.py  safety.py  safety_response_policy.py  thread_memory_manager.py
app/modules/children/: router.py
app/modules/controls/: router.py
app/modules/dashboard/: router.py
app/modules/explainability/: router.py
app/modules/guardrails/: client.py
app/modules/llm/: client.py  router.py
app/modules/mail/: service.py
app/modules/mobile_aliases/: router.py
app/modules/notifications/: router.py
app/modules/parent/: router.py
app/modules/privacy/: router.py
app/modules/reports/: router.py
app/modules/support/: router.py
app/modules/transcripts/: router.py
app/modules/trust/: router.py
app/shared/: envelope.py  exceptions.py
docker/postgres/: init.sql
docs/: Mobile Chat Guardrails Integration Plan.md  context-builder.md  subscriptions-and-billing-implementation-plan.md
tests/: test_chat_orchestration.py  test_guardrails_orchestration.py
