[project]
name = "pikuai-backend"
version = "0.1.0"
description = "PikuAI backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.1",
  "pydantic-settings>=2.2.1",
  "email-validator>=2.1.1",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.1.18"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3.2",
  "mypy>=1.8.0",
  "pytest>=8.0.2",
  "httpx>=0.27.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
